update authen
