# src/swagger/swagger.json
@@ -10,8 +10,8 @@
       "description": "API for authentication"
     },
     {
-      "name": "issuers",
-      "description": "API for issuers"
+      "name": "register",
+      "description": "API for register authen"
     },
     {
       "name": "claims",
@@ -19,7 +19,7 @@
     }
   ],
   "paths": {
-    "/api/v1/auth/login/{issuerId}": {
+    "/api/v1/auth/login/{adminId}": {
       "post": {
         "tags": [
           "auth"
@@ -28,9 +28,9 @@
         "description": "API login",
         "parameters": [
           {
-            "name": "issuerId",
+            "name": "adminId",
             "in": "path",
-            "description": "issuerId",
+            "description": "adminId",
             "required": true,
             "schema": {
               "type": "string"
@@ -71,7 +71,7 @@
         }
       }
     },
-    "/api/v1/auth/verify-token/{issuerId}": {
+    "/api/v1/auth/verify-token/{adminId}": {
       "post": {
         "tags": [
           "auth"
@@ -80,9 +80,70 @@
         "description": "API Verify Token",
         "parameters": [
           {
-            "name": "issuerId",
+            "name": "adminId",
             "in": "path",
-            "description": "issuerId",
+            "description": "adminId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Your jwz token",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "token": {
+                    "type": "string"
+                  },
+                  "role": {
+                    "type": "integer"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "default": {
+            "description": "Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/APIResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/auth/verify-token-admin/{adminId}": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "API Verify Token",
+        "description": "API Verify Token",
+        "parameters": [
+          {
+            "name": "adminId",
+            "in": "path",
+            "description": "adminId",
             "required": true,
             "schema": {
               "type": "string"
@@ -124,66 +185,13 @@
         }
       }
     },
-    "/api/v1/auth/verify-token-admin/{issuerId}": {
+    "/api/v1/register": {
       "post": {
         "tags": [
-          "auth"
+          "register"
         ],
-        "summary": "API Verify Token",
-        "description": "API Verify Token",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Your jwz token",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/VerifyToken"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/issuers/register": {
-      "post": {
-        "tags": [
-          "issuers"
-        ],
-        "summary": "Register new issuers",
-        "description": "Register new issuers",
+        "summary": "Register new adminId",
+        "description": "Register new adminId",
         "requestBody": {
           "content": {
             "application/json": {
@@ -217,7 +225,7 @@
         }
       }
     },
-    "/api/v1/issuers/{issuerId}/operators": {
+    "/api/v1/{adminId}/operators": {
       "post": {
         "security": [
           {
@@ -225,15 +233,15 @@
           }
         ],
         "tags": [
-          "issuers"
+          "register"
         ],
         "summary": "Create operator",
         "description": "Create operator",
         "parameters": [
           {
-            "name": "issuerId",
+            "name": "adminId",
             "in": "path",
-            "description": "issuerId",
+            "description": "adminId",
             "required": true,
             "schema": {
               "type": "string"
@@ -279,15 +287,15 @@
           }
         ],
         "tags": [
-          "issuers"
+          "register"
         ],
         "summary": "Get list operator",
         "description": "Get list operator",
         "parameters": [
           {
-            "name": "issuerId",
+            "name": "adminId",
             "in": "path",
-            "description": "issuerId",
+            "description": "adminId",
             "required": true,
             "schema": {
               "type": "string"
@@ -318,18 +326,18 @@
         }
       }
     },
-    "/api/v1/issuers/{issuerId}/operators/{operatorId}": {
+    "/api/v1/{adminId}/operators/{operatorId}": {
       "get": {
         "tags": [
-          "issuers"
+          "register"
         ],
         "summary": "Get operator infor",
         "description": "Get operator infor",
         "parameters": [
           {
-            "name": "issuerId",
+            "name": "adminId",
             "in": "path",
-            "description": "issuerId",
+            "description": "adminId",
             "required": true,
             "schema": {
               "type": "string"
@@ -375,15 +383,15 @@
           }
         ],
         "tags": [
-          "issuers"
+          "register"
         ],
         "summary": "Disable operator",
         "description": "Disable operator",
         "parameters": [
           {
-            "name": "issuerId",
+            "name": "adminId",
             "in": "path",
-            "description": "issuerId",
+            "description": "adminId",
             "required": true,
             "schema": {
               "type": "string"
@@ -547,6 +555,10 @@
           "operatorId": {
             "type": "string",
             "example": "1234"
+          },
+          "role": {
+            "type": "integer",
+            "example": 2
           }
         }
       }
